force-app/main/default/objects/Claim_Report__c/Claim_Report__c.object-meta.xml
<CustomObject>
    <label>Claim Report</label>
    <nameField>
        <label>Claim Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>