force-app/main/default/objects/Claim_Report__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Claim Report</relationshipLabel>
    <relationshipName>Claim_Report</relationshipName>
    <type>Lookup</type>
</CustomField>