force-app/main/default/objects/Claim_Report__c/fields/No_of_approved_claims__c.field-meta.xml
<CustomField>
    <fullName>No_of_approved_claims__c</fullName>
    <label>No of approved claims</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>