force-app/main/default/objects/Claim_Report__c/fields/No_of_rejected_claim__c.field-meta.xml
<CustomField>
    <fullName>No_of_rejected_claim__c</fullName>
    <label>No of rejected claim</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>