force-app/main/default/objects/Claim_Report__c/fields/No_of_Requested__c.field-meta.xml
<CustomField>
    <fullName>No_of_Requested__c</fullName>
    <label>No of Requested Claims</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>